--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
   },
   "dependencies": {
     "easy-zip": "0.0.4",
+    "gitlog": "^2.1.0",
     "lodash": "^3.10.1",
-    "q": "^1.4.1"
+    "parse-git": "^1.1.2",
+    "q": "^1.4.1",
+    "simple-git": "^1.8.0"
   }
 }
